force-app/main/default/objects/Lead/fields/Annual_Revenue_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Estimate__c</fullName>
    <label>Annual Revenue Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>