force-app/main/default/objects/Lead/fields/Source_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Source_Campaign__c</fullName>
    <label>Source Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>